--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,7 +2,7 @@
 #wall .tag-1 {
     display: none;
   }
-  div#wall .tag-1{
+  body #wall .tag-1{
 
 
     display: none;
@@ -13,12 +13,12 @@
 
   }
 
-div #wall #tag-3.slick wicked {
+div#wall #tag-3.slick.wicked {
 
 display: none;
 }
 
-div #wall #tag-4{
+#wall .parent  #tag-4{
 
     display: none;
 }
@@ -26,4 +26,14 @@ div #wall #tag-4{
 div#wall div.parent #tag-5.slick {
 
     display: none;
+}
+
+body div#wall div.parent div:last-child div#tag-6 {
+
+  display: none;
+}
+
+body div#wall div.parent div:first-child > #tag-7.slick{
+
+  display:none;
 }
